--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>Karma Clone</title>
 </head>
 <body>
 
