Positioning the divs in the proper position

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Karma Clone</title>
 </head>
 <body>
-
+  <div class="header"></div>
+  <div class="intro"></div>
+  <div class="feat"></div>
+  <div class="footer"></div>
 </body>
 </html>
