Formatting the top naviagtion

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <title>Karma Clone</title>
 </head>
 <body>
-  <div class="header"></div>
+  <div class="header">
+    <nav class="top-navigation">
+      <div class="content"></div>
+    </nav>
+  </div>
   <div class="intro"></div>
   <div class="feat"></div>
   <div class="footer"></div>
