--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
   <div class="header">
     <nav class="top-navigation">
-      <div class="content"></div>
+      <div class="content">
+          <img class="logo" src="http://thinkful-ed.github.io/karma-clone/img/karma-logo.svg" alt="Logo Image" width="26px">
+      </div>
     </nav>
   </div>
   <div class="intro"></div>
