Add images file and created a link list, box-sized the content container, added Roboto Font Family

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
   <title>Karma Clone</title>
 </head>
 <body>
@@ -10,6 +11,14 @@
     <nav class="top-navigation">
       <div class="content">
           <img class="logo" src="http://thinkful-ed.github.io/karma-clone/img/karma-logo.svg" alt="Logo Image" width="26px">
+          <ul class="links">
+            <li>Meet Karma</li>
+            <li>How It Works</li>
+            <li>Store</li>
+            <li>Blog</li>
+            <li>Help</li>
+            <li>Log in</li>
+          </ul>
       </div>
     </nav>
   </div>
