Lined up the menu items with the logo, smoothed the font, and made a hover event for the menu items.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="content">
           <img class="logo" src="http://thinkful-ed.github.io/karma-clone/img/karma-logo.svg" alt="Logo Image" width="26px">
           <ul class="links">
-            <li>Meet Karma</li>
+            <li class="active">Meet Karma</li>
             <li>How It Works</li>
             <li>Store</li>
             <li>Blog</li>
