--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <div class="header">
     <nav class="top-navigation">
       <div class="content">
-          <img class="logo" src="http://thinkful-ed.github.io/karma-clone/img/karma-logo.svg" alt="Logo Image" width="26px">
           <ul class="links">
             <li class="active">Meet Karma</li>
             <li>How It Works</li>
@@ -19,10 +18,13 @@
             <li>Help</li>
             <li>Log in</li>
           </ul>
+          <img class="logo" src="http://thinkful-ed.github.io/karma-clone/img/karma-logo.svg" alt="Logo Image" width="26px">
       </div>
     </nav>
   </div>
-  <div class="intro"></div>
+  <div class="intro">
+
+  </div>
   <div class="feat"></div>
   <div class="footer"></div>
 </body>
