--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
       </div>
     </nav>
   </div>
-  <div class="intro">
-
-  </div>
+  <section class="intro">
+    <div class="content">
+        <h1>Introducing Karma</h1>
+        <h3>Bring WiFi with you, everywhere you go.</h3>
+        <button>Learn More</button>
+    </div>
+  </section>
   <div class="feat"></div>
   <div class="footer"></div>
 </body>
