Restarting cpu, added the device images and captions.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,26 @@
         <button class="big-button">Learn More</button>
     </div>
   </section>
-  <div class="feat"></div>
+  <section class="feat">
+      <h2>Everyone needs a little Karma.</h2>
+      <div class="content">
+          <div class="devices flexbox"><img src="images/icon-devices.svg">
+            <div class="caption">
+              <h3>Internet for all devices</h3>
+            </div>
+          </div><!--
+          --><div class="devices flexbox"><img src="images/icon-coffee.svg">
+            <div class="caption">
+              <h3>Boost your productivity</h3>
+            </div>
+          </div><!--
+          --><div class="devices flexbox"><img src="images/icon-refill.svg">
+          <div class="caption">
+            <h3>Pay as you go</h3>
+          </div>
+        </div>
+      </div>
+  </section>
   <div class="footer"></div>
 </body>
 </html>
