--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <title>Karma Clone</title>
 </head>
 <body>
@@ -49,6 +50,15 @@
         </div>
       </div>
   </section>
-  <div class="footer"></div>
+  <div class="footer">
+    <div class="content">
+      <h4>Join us on</h4>
+      <ul class="icons">
+        <li class="twitter"></li>
+        <li class="facebook"></li>
+        <li class="instagram    "></li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
