--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+  <link rel="stylesheet" type="text/css" href="css/font-awesome-4.3.0/css/font-awesome.css">
   <title>Karma Clone</title>
 </head>
 <body>
@@ -33,32 +35,43 @@
   <section class="feat">
       <h2>Everyone needs a little Karma.</h2>
       <div class="content">
-          <div class="devices flexbox"><img src="images/icon-devices.svg">
+        <div class="devices">
+          <div class="feat_icon"><img src="images/icon-devices.svg">
             <div class="caption">
               <h3>Internet for all devices</h3>
             </div>
-          </div><!--
-          --><div class="devices flexbox"><img src="images/icon-coffee.svg">
+          </div>
+          <div class="feat_icon"><img src="images/icon-coffee.svg">
             <div class="caption">
               <h3>Boost your productivity</h3>
             </div>
-          </div><!--
-          --><div class="devices flexbox"><img src="images/icon-refill.svg">
-          <div class="caption">
-            <h3>Pay as you go</h3>
           </div>
-        </div>
-      </div>
+          <div class="feat_icon"><img src="images/icon-refill.svg">
+            <div class="caption">
+              <h3>Pay as you go</h3>
+            </div>
+          </div>
+        </div>  <!-- End of devices div -->
+      </div>  <!-- End of content div -->
   </section>
-  <div class="footer">
+  <footer class="social">
     <div class="content">
-      <h4>Join us on</h4>
+      <hr>
+      <h5>Join us on</h5>
       <ul class="icons">
-        <li class="twitter"></li>
-        <li class="facebook"></li>
-        <li class="instagram    "></li>
+        <li class="twitter">
+          <i class="fa fa-twitter"></i>
+        </li>
+        <li class="facebook">
+          <i class="fa fa-facebook"></i>
+        </li>
+        <li class="instagram">
+          <i class="fa fa-instagram"></i>
+        </li>
       </ul>
+      <br/>
+      <span class="copy">&copy;Karma Mobility, Inc.</span>
     </div>
-  </div>
+  </footer>
 </body>
 </html>
